# nova-simd

./: CMakeLists.txt  README  ampmod.hpp  ampmod_generic.hpp  ampmod_sse.hpp  generate_files.sh  generator_binary_generic.py  generator_binary_sse.py  generator_ternary_fallbacks.py  generator_ternary_generic.py  generator_ternary_sse.py  generator_unary_fallbacks.py  generator_unary_generic.py  simd_binary_arithmetic.hpp  simd_binary_arithmetic_generic.hpp  simd_binary_arithmetic_sse.hpp  simd_horizontal_functions.hpp  simd_math.hpp  simd_math_fallback_double.hpp  simd_math_fallback_float.hpp  simd_math_generic.hpp  simd_math_vec.hpp  simd_memory.hpp  simd_memory_fallback_double.hpp  simd_memory_fallback_float.hpp  simd_memory_generic.hpp  simd_memory_sse.hpp  simd_mix.hpp  simd_mix_sse.hpp  simd_pan.hpp  simd_pan_sse.hpp  simd_peakmeter.hpp  simd_round.hpp  simd_ternary_arithmetic.hpp  simd_ternary_arithmetic_fallbacks_double.hpp  simd_ternary_arithmetic_fallbacks_float.hpp  simd_ternary_arithmetic_generic.hpp  simd_ternary_arithmetic_sse.hpp  simd_unary_arithmetic.hpp  simd_unary_arithmetic_fallbacks_double.hpp  (+21 more)
benchmarks/: CMakeLists.txt  abs_benchmarks.cpp  cache_aligned_array.hpp  clear_benchmark.cpp  clip_benchmarks.cpp  perf_counter.hpp  simd_plus_benchmarks.cpp  simd_unroll_benchmarks.cpp  simd_unroll_benchmarks2.cpp
detail/: define_macros.hpp  get_pointer.hpp  math.hpp  unroll_helpers.hpp  vec_math.hpp  wrap_argument_vector.hpp
testsuite/: CMakeLists.txt  ampmod_test.cpp  simd_binary_tests.cpp  simd_horizontal_tests.cpp  simd_math_tests.cpp  simd_mix_tests.cpp  (+11 more)
(+5 files in other folders)
